--- a/root/styles/visualization-tool.css
+++ b/root/styles/visualization-tool.css
@@ -93,3 +93,10 @@ main
 {
     background-color: grey;
 }
+#output-graph canvas
+{
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    margin: 5px;
+    border-radius: 20px;
+}
