Updates to graph code
Graph will now automatically scale itself so that the x and y axes units are the same length

--- a/root/styles/visualization-tool.css
+++ b/root/styles/visualization-tool.css
@@ -115,6 +115,7 @@ main
 #title-ribbon h2
 {
     height: 100%;
+    width: 100%;
     background-image: url("/images/ribbon-length.svg");
     background-size: contain;
 }
