--- a/root/styles/general.css
+++ b/root/styles/general.css
@@ -1,7 +1,14 @@
 *
 {
+    box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    color: white;
+}
+
+body
+{
+    background-color: rgb(12, 12, 30);
 }
 
 .pane
