--- a/root/styles/general.css
+++ b/root/styles/general.css
@@ -1,5 +1,13 @@
+/*Load fonts*/
+@font-face
+{
+    font-family: LatinMordernMath;
+    src: url("/fonts/latinmodern-math.otf") format("opentype");
+}
+
 *
 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
@@ -18,6 +26,5 @@ body
 
 h2
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
 }
