--- a/root/styles/home.css
+++ b/root/styles/home.css
@@ -1,4 +1,3 @@
-
 .category-label
 {
     display: flex;
@@ -33,10 +32,22 @@
     height: 60px;
 }
 
+.goto-tool-button img
+{
+    height: 100%;
+}
 .goto-tool-button
 {
+    transition-property: all;
+    transition-duration: 0.4s;
     background-color: green;
     padding: 10px;
+}
+.goto-tool-button:hover
+{
+    cursor: pointer;
+    background-color: rgb(0, 235, 0);
+    padding: 15px;
 }
 
 
@@ -48,7 +59,7 @@
 
     .category-label
     {
-        border-radius: 0px 15px 15px 0px;
+        border-radius: 0px 40px 40px 0px;
     }
 
     #site-logo
@@ -81,6 +92,8 @@
     .tool-content-wrapper
     {
         padding-left: 50px;
+        display: grid;
+        grid-template-columns: auto auto;
     }
 }
 
@@ -91,6 +104,7 @@
     {
         position: fixed;
         top: 0px;
+        z-index: 1;
     }
     nav
     {
@@ -131,5 +145,24 @@
     {
         position: absolute;
         top: 20vw;
+    }
+
+    .title-ribbon
+    {
+        height: 40px;
+        display: flex;
+        flex-direction: row;
+    }
+    .title-ribbon h2
+    {
+        background-image: url("/images/ribbon-length.svg");
+        background-size: contain;
+        line-height: 40px;
+        font-size: 16px;
+        width: calc(100% - 40px);
+    }
+    .title-ribbon img
+    {
+        height: 40px;
     }
 }
