--- a/root/styles/visualization-tool.css
+++ b/root/styles/visualization-tool.css
@@ -3,6 +3,19 @@ body
     overflow: hidden;
 }
 
+.pull-out-menu
+{
+    display: flex;
+    flex-direction: row;
+}
+
+
+.tabbed-content
+{
+    grid-column: 1 / 2;
+    grid-row: 1 / 6;
+}
+
 .tab
 {
     width: min-content;
@@ -25,8 +38,8 @@ body
 {
     background-color: rgb(197, 175, 175);
     height: 500px;
-    width: 100px;
     overflow-y: scroll;
+    overflow-x: visible;
 }
 
 .field
@@ -68,7 +81,7 @@ main
 {
     background-color: green;
     grid-column: 3 / 4;
-    grid-row: 1 / 4;
+    grid-row: 2 / 4;
 }
 #output-blackboard
 {
@@ -105,16 +118,16 @@ main
     grid-column: 2 / 4;
     grid-row: 1 / 2;
     display: flex;
-    align-items: center;
+    flex-direction: row;
 }
 #title-ribbon img
 {
-    height: 100%;
+    height: 60px;
 }
 #title-ribbon h2
 {
-    height: 100%;
-    width: 100%;
     background-image: url("/images/ribbon-length.svg");
     background-size: contain;
+    line-height: 60px;
+    width: 100%;
 }
