--- a/root/styles/visualization-tool.css
+++ b/root/styles/visualization-tool.css
@@ -1,3 +1,22 @@
+.timeline-button
+{
+    width: 60px;
+    height: 60px;
+    border-radius: 15px;
+    border: solid grey 3px;
+    background-color: white;
+}
+.timeline-button:hover
+{
+    cursor: pointer;
+    background-color: grey;
+}
+.timeline-button img
+{
+    width: 50px;
+    height: 50px;
+}
+
 body
 {
     overflow: hidden;
@@ -96,14 +115,6 @@ main
     justify-content: center;
     grid-column: 3 / 4;
     grid-row: 4 / 5;
-}
-.timeline-button
-{
-    background-color: white;
-}
-.timeline-button:hover
-{
-    background-color: grey;
 }
 #output-graph canvas
 {
