File structure refactoring
Reordeded the files and for image assets and updated all paths

--- a/root/styles/home.css
+++ b/root/styles/home.css
@@ -22,7 +22,7 @@
 }
 .title-ribbon h2
 {
-    background-image: url("/images/ribbon-length.svg");
+    background-image: url("/images/decorations/ribbon-middle.svg");
     background-size: contain;
     line-height: 60px;
     width: calc(100% - 60px);
@@ -155,7 +155,7 @@
     }
     .title-ribbon h2
     {
-        background-image: url("/images/ribbon-length.svg");
+        background-image: url("/images/decorations/ribbon-middle.svg");
         background-size: contain;
         line-height: 40px;
         font-size: 16px;
