--- a/root/styles/home.css
+++ b/root/styles/home.css
@@ -1,5 +1,8 @@
-.category-label
-{
+.category-label{
+    transition-property: all;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+
     display: flex;
     flex-direction: row;
     color: white;
@@ -8,64 +11,53 @@
     padding: 10px;
     margin: 5px 0px;
 }
-.category-label img
-{
+.category-label img{
     width: 40px; height: 40px;
     margin-right: 10px;
 }
 
-.title-ribbon
-{
+.title-ribbon{
     height: 60px;
     display: flex;
     flex-direction: row;
 }
-.title-ribbon h2
-{
+.title-ribbon h2{
     background-image: url("/images/decorations/ribbon-middle.svg");
     background-size: contain;
     line-height: 60px;
     width: calc(100% - 60px);
 }
-.title-ribbon img
-{
+.title-ribbon img{
     height: 60px;
 }
 
-.goto-tool-button
-{
+.goto-tool-button{
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 50px;
 }
-.goto-tool-button a
-{
+.goto-tool-button a{
     padding-left: 10px;
     line-height: 50px;
     background-color: green;
 }
-.goto-tool-button img
-{
+.goto-tool-button img{
     height: 50px;
 }
-.goto-tool-button:hover
-{
+.goto-tool-button:hover{
     cursor: pointer;
 }
 
-.tool-explanation *
-{
+.tool-explanation *{
     margin-bottom: 10px;
 }
 
-.tool-info-wrapper
-{
+.tool-info-wrapper{
     margin-bottom: 50px;
 }
 
-.input-output-wrapper
-{
+.input-output-wrapper{
     display: flex;
     justify-content: space-evenly;
 }
@@ -75,51 +67,52 @@
 @media only screen and (min-width: 415px)
 {
     /* The navigation pull tab is mobile only. */
-    #nav-pull-tab { display: none; }
+    #nav-pull-tab{ display: none; }
 
-    .category-label
-    {
+    .category-label{
         background-color: rgb(255, 89, 89);
         border-radius: 0px 40px 40px 0px;
     }
-    .label-active
-    {
+    .label-active{
         background-color: red;
+        padding: 15px;
     }
 
-    #site-logo
-    {
+    #site-logo{
         position: fixed;
         left: 0px; top: 0px;
         width: 20vw; height: 5vw;
+        z-index: 99;
     }
-    #nav-wrapper
-    {
+    #nav-wrapper{
         position: fixed;
         top: 6vw;
         max-width: 25vw;
+        z-index: 99;
     }
-    .category-label:hover
+    .site-logo
     {
+
+        z-index: 99;
+    }
+    .category-label:hover{
         background-color: rgb(255, 130, 130);
         cursor: pointer;
     }
 
-    main
-    {
+    main{
         margin-left: 25vw;
+        z-index: 1;
     }
 
-    .tool-content-wrapper
-    {
+    .tool-content-wrapper{
         padding-left: 50px;
         padding-right: 50px;
         display: grid;
         grid-template-columns: auto auto;
     }
 
-    canvas
-    {
+    canvas{
         width: 400px;
         height: 100%;
     }
@@ -128,27 +121,25 @@
 /* Only applies to mobile devices. */
 @media only screen and (max-width: 414px)
 {
-    #nav-wrapper
-    {
+    #nav-wrapper{
         position: fixed;
         top: 0px;
-        z-index: 1;
+        z-index: 99;
     }
-    nav
-    {
-        transition-property: height 1s;
+    nav{
+
+        transition-property: all;
+        transition-duration: 1s;
         background-color: red;
 
-        height: auto;
+        height: 500px;
         overflow-y: hidden;
 
     }
-    .mobile-collapsed
-    {
+    .mobile-collapsed{
         height: 0px;
     }
-    #nav-pull-tab
-    {
+    #nav-pull-tab{
         margin-left: 5px;
         background-color: red;
         width: 18vw; height: 18vw;
@@ -158,39 +149,33 @@
         align-items: center;
         justify-content: center;
     }
-    #nav-pull-tab img
-    {
+    #nav-pull-tab img{
         width: 60%; height: 60%;
     }
-    #site-logo
-    {
+    #site-logo{
         position: fixed;
         right: 0px; top: 0px;
         width: 80vw; height: 20vw;
     }
 
-    main
-    {
+    main{
         position: absolute;
         top: 20vw;
     }
 
-    .title-ribbon
-    {
+    .title-ribbon{
         height: 40px;
         display: flex;
         flex-direction: row;
     }
-    .title-ribbon h2
-    {
+    .title-ribbon h2{
         background-image: url("/images/decorations/ribbon-middle.svg");
         background-size: contain;
         line-height: 40px;
         font-size: 16px;
         width: calc(100% - 40px);
     }
-    .title-ribbon img
-    {
+    .title-ribbon img{
         height: 40px;
     }
 }
