--- a/root/styles/home.css
+++ b/root/styles/home.css
@@ -1,11 +1,10 @@
+/* The scroll-to-section labels on the left. */
 .category-label{
     transition-property: all;
     transition-duration: 0.2s;
-    transition-timing-function: ease-in-out;
-
+    transition-timing-function: linear;
     display: flex;
     flex-direction: row;
-    color: white;
     align-items: center;
     font-size: 25px;
     padding: 10px;
@@ -15,22 +14,29 @@
     width: 40px; height: 40px;
     margin-right: 10px;
 }
+.category-label p{
+    color: black;
+}
 
+/* The ribbon section headers. */
 .title-ribbon{
-    height: 60px;
+    height: 80px;
     display: flex;
     flex-direction: row;
+}
+.title-ribbon img{
+    /* This is the end of the ribbon. */
+    height: 80px;
 }
 .title-ribbon h2{
     background-image: url("/images/decorations/ribbon-middle.svg");
     background-size: contain;
-    line-height: 60px;
-    width: calc(100% - 60px);
-}
-.title-ribbon img{
-    height: 60px;
+    line-height: 80px;
+    /* Full width minus the ribbon end graphic. */
+    width: calc(100% - 80px);
 }
 
+/* The link that leads to the interactive tool. */
 .goto-tool-button{
     display: flex;
     flex-direction: row;
@@ -40,20 +46,25 @@
 .goto-tool-button a{
     padding-left: 10px;
     line-height: 50px;
-    background-color: green;
+    color: black;
+    background-color: white;
 }
 .goto-tool-button img{
+    /* This is the beveled edge of the button. */
     height: 50px;
+    color: white;
 }
 .goto-tool-button:hover{
     cursor: pointer;
 }
 
+/* Styling for the tool information. */
 .tool-explanation *{
+    /* Add internal spacing. */
     margin-bottom: 10px;
 }
-
 .tool-info-wrapper{
+    /* This adds spacing to the next ribbon. */
     margin-bottom: 50px;
 }
 
@@ -64,14 +75,14 @@
 .input-panel{
     padding: 10px;
     border-radius: 10px;
-    background-color: red;
+    background-color: rgb(14, 14, 53);
     transition-property: all;
     transition-duration: 1s;
 }
 .output-panel{
     padding: 10px;
     border-radius: 10px;
-    background-color: green;
+    background-color: rgb(33, 63, 83);
     transition-property: all;
     transition-duration: 1s;
 }
@@ -87,29 +98,31 @@
     #nav-pull-tab{ display: none; }
 
     .category-label{
-        background-color: rgb(255, 89, 89);
-        border-radius: 0px 40px 40px 0px;
+        background-color: white;
+        border-radius: 0px 20px 20px 0px;
     }
     .label-active{
-        background-color: red;
-        padding: 15px;
+        background-color: rgb(180, 180, 180);
+        padding: 25px;
+    }
+    .label-active img{
+        width: 60px; height: 60px;
     }
 
     #site-logo{
         position: fixed;
         left: 0px; top: 0px;
-        width: 20vw; height: 5vw;
+        width: 20vw; height: 7.5vw;
         z-index: 99;
     }
     #nav-wrapper{
         position: fixed;
-        top: 6vw;
-        max-width: 25vw;
+        top: 7.5vw;
+        width: 22vw;
         z-index: 99;
     }
     .site-logo
     {
-
         z-index: 99;
     }
     .category-label:hover{
@@ -144,21 +157,19 @@
         z-index: 99;
     }
     nav{
-
         transition-property: all;
         transition-duration: 1s;
-        background-color: red;
-
-        height: 500px;
+        background-color: white;
+        /* TODO representative height should be calculated */
+        height: 280px;
         overflow-y: hidden;
-
     }
     .mobile-collapsed{
         height: 0px;
     }
     #nav-pull-tab{
         margin-left: 5px;
-        background-color: red;
+        background-color: white;
         width: 18vw; height: 18vw;
         border-radius: 0px 0px 15px 15px;
 
@@ -170,9 +181,11 @@
         width: 60%; height: 60%;
     }
     #site-logo{
+        z-index: 99;
         position: fixed;
         right: 0px; top: 0px;
-        width: 80vw; height: 20vw;
+        width: 100vw; height: 18vw;
+        background-color: #020213;
     }
 
     main{
@@ -194,5 +207,14 @@
     }
     .title-ribbon img{
         height: 40px;
+    }
+    .tool-content-wrapper{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    canvas{
+        width: 100%;
+        height: 30vh;
     }
 }
